--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "archiver": "^7.0.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-forge": "^1.3.3",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
